--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -16,39 +16,48 @@
 
 <body>
   <header id="top">
-    <div class="header-bg">
+    <div class="con_header-bg">
       <a href="#top">
         <h2 class="big-header">SUZUKI AOI</h2>
       </a>
       <div class="small-header">
-        <a href="../index.html">
-          <h2 class="small-name">SUZUKI AOI</h2>
-        </a>
-        <nav>
-          <div class="navtoggle">
-            <button class="menu-trigger" id="menu07">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+        <div class="p-position">
+          <a href="#top">
+            <h3 class="small-name">bird coffee</h3>
+          </a>
+          <div class="p-top menu-trigger" id="menu07">
+            <img src="../image/portfolio_cover_p.jpg" alt="">
           </div>
-          <div id="g-nav">
-            <ul>
-              <li>
-                <h2>Top</h2>
-              </li>
-              <li>
-                <h2>Profile</h2>
-              </li>
-              <li>
-                <h2>Contents</h2>
-              </li>
-            </ul>
+          <h3 class="text-repeat">
+            <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
+          </h3>
           </div>
-        </nav>
-      </div>
+          <nav>
+            <div id="g-nav">
+              <div class="g-nav-box">
+                <div class="p-top">
+                  <img src="../image/portfolio_cover_p.jpg" alt="">
+                </div>
+                <ul>
+                  <li>
+                    <a href="../index.html">
+                      <h2>Top</h2>
+                    </a>
+                  </li>
+                  <li>
+                    <h2>Profile</h2>
+                  </li>
+                  <li>
+                    <h2>Contents</h2>
+                  </li>
+                </ul>
+              </div>
 
-    </div>
+            </div>
+          </nav>
+        </div>
+
+      </div>
   </header>
 
   <div class="content-width">
@@ -139,22 +148,22 @@
         </div>
       </div>
     </div>
-      <div class="sec-2 top-mg" id="area-2">
-        <div class="left-width">
-          <h1>Pack<br>age</h1>
-          <ul>
-            <li>Diagram</li>
-            <li>1*1 Symbol mark</li>
-            <li>Symbol + Logotype</li>
-            <li>Symbol + Logotype(Negative)</li>
-          </ul>
-        </div>
-        <div class="right-width">
-          <div class="slider">
+    <div class="sec-2 top-mg" id="area-2">
+      <div class="left-width">
+        <h1>Pack<br>age</h1>
+        <ul>
+          <li>Diagram</li>
+          <li>1*1 Symbol mark</li>
+          <li>Symbol + Logotype</li>
+          <li>Symbol + Logotype(Negative)</li>
+        </ul>
+      </div>
+      <div class="right-width">
+        <div class="slider">
 
-          </div>
         </div>
       </div>
+    </div>
 
 
     <div class="sec-3 top-mg" id="area-3">
