--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/futura-lt" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/sub.css">
@@ -26,44 +28,43 @@
             <h3 class="small-name">bird coffee</h3>
           </a>
           <div class="p-top menu-trigger" id="menu07">
-            <img src="../image/portfolio_cover_p.jpg" alt="">
+            <img src="../image/portfolio_png.png" alt="">
           </div>
           <h3 class="text-repeat">
             <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
           </h3>
-          </div>
-          <nav>
-            <div id="g-nav">
-              <div class="g-nav-box">
-                <div class="p-top">
-                  <img src="../image/portfolio_cover_p.jpg" alt="">
-                </div>
-                <ul>
-                  <li>
-                    <a href="../index.html">
-                      <h2>Top</h2>
-                    </a>
-                  </li>
-                  <li>
-                    <h2>Profile</h2>
-                  </li>
-                  <li>
-                    <h2>Contents</h2>
-                  </li>
-                </ul>
-              </div>
-
-            </div>
-          </nav>
         </div>
+        <nav>
+          <div id="g-nav">
+            <div class="g-nav-box">
+              <div class="p-top">
+                <img src="../image/portfolio_png.png" alt="">
+              </div>
+              <ul>
+                <li>
+                  <a href="../index.html">
+                    <h2>Top</h2>
+                  </a>
+                </li>
+                <li>
+                  <h2>Profile</h2>
+                </li>
+                <li>
+                  <h2>Contents</h2>
+                </li>
+              </ul>
+            </div>
 
+          </div>
+        </nav>
       </div>
+
+    </div>
   </header>
 
   <div class="content-width">
     <div class="ct-title">
       <h1>bird coffee</h1>
-      <hr>
     </div>
     <div class="sec-top">
       <div class="top-img left-width">
@@ -71,62 +72,42 @@
       </div>
       <div class="top-exp right-width">
         <div class="exp-box">
-          <h2>Project</h2>
-          <h4>
-            代々木公園に開くカフェ<br>園内のバードサンクチュアリに隣接<br>営業時間：7:30~23:00<br>公園内外のイベントへの参加、季節・自然の変化に応じた空間の使い方や食べ物の提案など、柔軟な利用を目標としている。
-          </h4>
+          <h3>Project</h3>
+          <h6>
+            代々木公園に開くカフェ。園内のバードサンクチュアリに隣接する。<br>野鳥が暮らす都心の公園に、人間も暮らしの間に立ち止まれる（立ち寄れる）、開かれた場所をつくりたい。休憩すること、作業すること、なんでも。鳥が気ままに鳴くように、人間も気ままにフラっとしたいよね、というニーズを狙う。<br>公園内外のイベントへの参加、季節・自然の変化に応じた空間の使い方や食べ物の提案など、柔軟な利用を目標としている。
+          </h6>
         </div>
         <div class="exp-box">
-          <h2>Target</h2>
-          <h4>代々木公園利用者、10代後半〜50代男女</h4>
+          <h3>Target</h3>
+          <h6>代々木公園利用者、10代後半〜50代男女</h6>
         </div>
         <div class="exp-box">
-          <h2>Concept</h2>
-          <h4>それぞれの休息とちょうどいい時間を！</h4>
+          <h3>Concept</h3>
+          <h3>それぞれの休息とちょうどいい時間を！</h3>
         </div>
         <div class="exp-box">
-          <h2>Item</h2>
+          <h3>Font</h3>
+          <h6>日本語<span class="yu-gothic">游ゴシック</span></h6>
+          <h6>英数字・記号<span class="futura">Futura</span></h6>
+        </div>
+        <div class="exp-box">
+          <h3>Item / Time required</h3>
           <ul class="item-list">
             <li>
-              <h4><a href="#area-1">logo</a></h4>
+              <h6><a href="#area-1">Logo</a> / 5h</h6>
             </li>
             <li>
-              <h4><a href="#area-2">package</a></h4>
+              <h6><a href="#area-2">Poster B0</a>・<a href="#area-3">バス広告</a> / 10h</h6>
             </li>
             <li>
-              <h4><a href="#area-3">website</a></h4>
+              <h6><a href="#area-4">Copy</a> / 3h</h6>
             </li>
             <li>
-              <h4><a href="#area-4">copy</a></h4>
+              <h6><a href="#area-5">Package</a> / 15h</h6>
             </li>
-          </ul>
-        </div>
-        <div class="exp-box">
-          <h2>Tool</h2>
-          <ul class="tool-icon">
-            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/adobe-illustrator--v1.png"
-                alt="adobe-illustrator--v1" /></li>
-            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/adobe-photoshop--v1.png"
-                alt="adobe-photoshop--v1" /></li>
-            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/figma--v1.png" alt="figma--v1" /></li>
-            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/visual-studio.png"
-                alt="visual-studio" /></li>
-            <li><img width="100" height="100" src="https://img.icons8.com/ios/100/javascript--v1.png"
-                alt="javascript--v1" /></li>
-            <li></li>
-            <li></li>
-          </ul>
-          <ul class="tool-icon">
-            <li><img width="96" height="96" src="https://img.icons8.com/color/96/adobe-illustrator--v1.png"
-                alt="adobe-illustrator--v1" /></li>
-            <li><img width="96" height="96" src="https://img.icons8.com/color/96/adobe-photoshop--v1.png"
-                alt="adobe-photoshop--v1" /></li>
-            <li><img width="80" height="80" src="https://img.icons8.com/color/80/figma--v1.png" alt="figma--v1" /></li>
-            <li><img width="80" height="80" src="https://img.icons8.com/color/80/visual-studio-code-2019.png"
-                alt="visual-studio-code-2019" /></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <h6><a href="#area-6">Web site</a> / 30h</h6>
+            </li>
           </ul>
         </div>
       </div>
@@ -134,33 +115,76 @@
     <div class="sec-1 top-mg" id="area-1">
       <div class="left-width">
         <h1>Logo</h1>
-        <h5>お店のコンセプト「それぞれの休息とちょうど良い時間を！」に沿って、「bi」の造形と鳥が水を飲んでいるようなシルエットを組み合わせてキャッチーなアイコンとなるロゴを作成しました。</h5>
-        <ul>
-          <li>Diagram</li>
-          <li>1*1 Symbol mark</li>
-          <li>Symbol + Logotype</li>
-          <li>Symbol + Logotype(Negative)</li>
+        <p class="exp">店名[bird coffee]から[b]と[i]のドットを組み合わせ、シルエットで鳥の横顔を表現した。視認性の高いフラットデザインかつ店のアイコンとして印象に残るロゴを目指した。</p>
+        <ul class="p-goto-nav__lists">
+          <li class="p-goto-nav__list js-navList">
+            <p>Diagram 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Diagram 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>1*1 Symbol mark</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Symbol + Logotype</p>
+          </li>
         </ul>
       </div>
       <div class="right-width">
-        <div class="slider">
-
-        </div>
+        <ul class="slider js-slickGoTo">
+          <li class="slider-item slider-item01 bc_01">
+          </li>
+          <li class="slider-item slider-item02 bc_02">
+          </li>
+          <li class="slider-item slider-item03 bc_03">
+          </li>
+          <li class="slider-item slider-item04 bc_04">
+          </li>
+        </ul>
       </div>
     </div>
     <div class="sec-2 top-mg" id="area-2">
       <div class="left-width">
-        <h1>Pack<br>age</h1>
-        <ul>
-          <li>Diagram</li>
-          <li>1*1 Symbol mark</li>
-          <li>Symbol + Logotype</li>
-          <li>Symbol + Logotype(Negative)</li>
+        <h1>Poster</h1>
+        <h3>B0 W1456*H1030</h3>
+        <ul class="p-goto-nav__lists">
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 3</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 4</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 2</p>
+          </li>
         </ul>
       </div>
       <div class="right-width">
         <div class="slider">
-
+          <ul class="slider js-slickGoTo">
+            <li class="slider-item slider-item05">
+            </li>
+            <li class="slider-item slider-item06">
+            </li>
+            <li class="slider-item slider-item07">
+            </li>
+            <li class="slider-item slider-item08">
+            </li>
+            <li class="slider-item slider-item09">
+            </li>
+            <li class="slider-item slider-item10">
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -168,22 +192,46 @@
 
     <div class="sec-3 top-mg" id="area-3">
       <div class="left-width">
-        <h1>Web<br>site</h1>
-        <a href="../bird_coffee/top.html" target="_blank">
-          <h5>web site<img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/external-link.png"
-              alt="external-link" /></h5>
-        </a>
-        <ul>
-          <li>Diagram</li>
-          <li>1*1 Symbol mark</li>
-          <li>Symbol + Logotype</li>
-          <li>Symbol + Logotype(Negative)</li>
+        <h1>Poster</h1>
+        <h3>バス広告 W1185*H1750</h3>
+        <ul class="p-goto-nav__lists">
+          <li class="p-goto-nav__list js-navList">
+            <p>Poster 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 2</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 3</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>poster 4</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 1</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>MockUp 2</p>
+          </li>
         </ul>
 
       </div>
       <div class="right-width">
         <div class="slider">
-
+          <ul class="slider js-slickGoTo">
+            <li class="slider-item slider-item11">
+            </li>
+            <li class="slider-item slider-item12">
+            </li>
+            <li class="slider-item slider-item13">
+            </li>
+            <li class="slider-item slider-item14">
+            </li>
+            <li class="slider-item slider-item15">
+            </li>
+            <li class="slider-item slider-item16">
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -194,25 +242,90 @@
       </div>
       <div class="right-width">
         <div class="copy-box">
-          <h3>Poster ver.</h3>
-          <h5>
-            公園で遊んだ後の休憩、ショッピングの間に散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ずっと空いているカフェをつくりました。朝のさわやかな空気を感じられる７:３０から、夜のお仕事終わりになんとやっている２３:００まで、ずっと営業しています。おいしいコーヒーと、食べ物もずっと置いています。とくに何も考えず、やっているかな？の心配もいりません。代々木公園でそれぞれの休息とちょうどいい時間を！
-          </h5>
+          <h3>Poster copy</h3>
+          <h6>
+            公園で遊んだ後の休憩、ショッピングの間に散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ずっと空いているカフェをつくりました。朝のさわやかな空気を感じられる7:30から、夜のお仕事終わりになんとやっている23:00まで、ずっと営業しています。おいしいコーヒーと食べ物も、ずっと置いています。とくに何も考えず、やっているかな？の心配もいりません。
+          </h6>
         </div>
         <div class="copy-box">
-          <h3>Web ver.</h3>
-          <h5>
-            公園で遊んだ後の休憩、ショッピングのあいだに散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ちょっと長めに開いているコーヒーショップです。自然と鳥とそのとなりに、あなたにぴったりの時間を見つけてください。
-          </h5>
+          <h3>Web copy</h3>
+          <h6>
+            公園で遊んだ後の休憩、ショッピングのあいだに散歩、ペットのお散歩ついでにウォーキング、仕事終わりにリフレッシュ、どんな時間にも寄り添える、ちょっと長めに開いているカフェです。自然と鳥とそのとなりに、あなたにぴったりの時間を見つけてください。
+          </h6>
         </div>
       </div>
     </div>
 
-    <footer id="footer">
-      <p id="page-top"><a href="#">
-          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-        </a></p>
-    </footer>
+    <div class="sec-5 top-mg" id="area-5">
+      <div class="left-width">
+        <h1>Package</h1>
+        <ul class="p-goto-nav__lists">
+          <li class="p-goto-nav__list js-navList"><p>Paper Cup[Basic]</p></li>
+          <li class="p-goto-nav__list js-navList"><p>Paper Cup[Seasonal]</p></li>
+          <li class="p-goto-nav__list js-navList"><p>Takeout Food Label</p></li>
+          <li class="p-goto-nav__list js-navList"><p>Stecker</p></li>
+          <li class="p-goto-nav__list js-navList"><p>Ice Cream Cup</p></li>
+          <li class="p-goto-nav__list js-navList"><p>Coffee Beans Bag</p></li>
+        </ul>
+      </div>
+      <div class="right-width">
+        <div class="slider">
+          <ul class="slider js-slickGoTo">
+            <li class="slider-item slider-item21">
+            </li>
+            <li class="slider-item slider-item22">
+            </li>
+            <li class="slider-item slider-item23">
+            </li>
+            <li class="slider-item slider-item24">
+            </li>
+            <li class="slider-item slider-item25">
+            </li>
+            <li class="slider-item slider-item26">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="sec-6 top-mg" id="area-6">
+      <div class="left-width">
+        <h1>Web site</h1>
+        <a href="../bird_coffee/top.html" target="_blank">
+          <h5>bird-coffee.com<img width="25" height="25" src="https://img.icons8.com/ios-glyphs/25/external-link.png"
+              alt="external-link" /></h5>
+        </a>
+        <ul class="p-goto-nav__lists">
+          <li class="p-goto-nav__list js-navList"><p>Desktop MockUp</p></li>
+          <li class="p-goto-nav__list js-navList"><p>iPone MockUp</p></li>
+        </ul>
+      </div>
+      <div class="right-width">
+        <div class="slider">
+          <ul class="slider js-slickGoTo">
+            <li class="slider-item slider-item27">
+            </li>
+            <li class="slider-item slider-item28">
+            </li>
+          </ul>
+          <!-- <div class="web-page">
+            <img src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
+        </div> -->
+        </div>
+      </div>
+      
+    </div>
+    <div class="right-width web-page">
+        <img class="window" src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
+        <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
+    </div>
+  </div>
+
+
+  <footer id="footer">
+    <p id="page-top"><a href="#">
+        <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
+      </a></p>
+  </footer>
 
 
   </div>
@@ -221,7 +334,9 @@
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="../js/main.js"></script>
+  <script src="../js/slick.js"></script>
 
 </body>
 
