--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -24,9 +24,9 @@
       </a>
       <div class="small-header">
         <div class="p-position">
-          <a href="#top">
-            <h3 class="small-name">bird coffee</h3>
-          </a>
+            <button id="topbtn">
+              <h3 class="small-name none">bird coffee</h3>
+            </button>
           <div class="p-top menu-trigger" id="menu07">
             <img src="../image/portfolio_png.png" alt="">
           </div>
@@ -38,19 +38,19 @@
           <div id="g-nav">
             <div class="g-nav-box">
               <div class="p-top">
-                <img src="../image/portfolio_png.png" alt="">
+                <img src="../image/portfolio_png.png" alt="logo">
               </div>
               <ul>
                 <li>
                   <a href="../index.html">
-                    <h2>Top</h2>
+                    <h1>Top</h1>
                   </a>
                 </li>
                 <li>
-                  <h2>Profile</h2>
+                  <h1>Profile</h1>
                 </li>
                 <li>
-                  <h2>Contents</h2>
+                  <h1>Contents</h1>
                 </li>
               </ul>
             </div>
