--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -24,9 +24,9 @@
       </a>
       <div class="small-header">
         <div class="p-position">
-            <button id="topbtn">
-              <h3 class="small-name none">bird coffee</h3>
-            </button>
+          <button id="topbtn">
+            <h3 class="small-name none">bird coffee</h3>
+          </button>
           <div class="p-top menu-trigger" id="menu07">
             <img src="../image/portfolio_png.png" alt="">
           </div>
@@ -34,32 +34,30 @@
             <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
           </h3>
         </div>
-        <nav>
-          <div id="g-nav">
-            <div class="g-nav-box">
-              <div class="p-top">
-                <img src="../image/portfolio_png.png" alt="logo">
-              </div>
-              <ul>
-                <li>
-                  <a href="../index.html">
-                    <h1>Top</h1>
-                  </a>
-                </li>
-                <li>
-                  <h1>Profile</h1>
-                </li>
-                <li>
-                  <h1>Contents</h1>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-        </nav>
       </div>
-
     </div>
+    <nav>
+      <div id="g-nav">
+        <div class="g-nav-box">
+          <div class="p-top">
+            <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
+          </div>
+          <ul>
+            <li>
+              <a href="../index.html">
+                <h1>Top</h1>
+              </a>
+            </li>
+            <li>
+              <h1>Profile</h1>
+            </li>
+            <li>
+              <h1>Contents</h1>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <div class="content-width">
@@ -260,12 +258,24 @@
       <div class="left-width">
         <h1>Package</h1>
         <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList"><p>Paper Cup[Basic]</p></li>
-          <li class="p-goto-nav__list js-navList"><p>Paper Cup[Seasonal]</p></li>
-          <li class="p-goto-nav__list js-navList"><p>Takeout Food Label</p></li>
-          <li class="p-goto-nav__list js-navList"><p>Stecker</p></li>
-          <li class="p-goto-nav__list js-navList"><p>Ice Cream Cup</p></li>
-          <li class="p-goto-nav__list js-navList"><p>Coffee Beans Bag</p></li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Paper Cup[Basic]</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Paper Cup[Seasonal]</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Takeout Food Label</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Stecker</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Ice Cream Cup</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Coffee Beans Bag</p>
+          </li>
         </ul>
       </div>
       <div class="right-width">
@@ -295,8 +305,12 @@
               alt="external-link" /></h5>
         </a>
         <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList"><p>Desktop MockUp</p></li>
-          <li class="p-goto-nav__list js-navList"><p>iPone MockUp</p></li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Desktop MockUp</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>iPone MockUp</p>
+          </li>
         </ul>
       </div>
       <div class="right-width">
@@ -312,11 +326,11 @@
         </div> -->
         </div>
       </div>
-      
+
     </div>
     <div class="right-width web-page">
-        <img class="window" src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
-        <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
+      <img class="window" src="../image/bird_coffee/Desktop - 1_2.jpg" alt="">
+      <img class="iphone" src="../image/bird_coffee/iPhone 14 & 15 Pro - 1_2.jpg" alt="">
     </div>
   </div>
 
