--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SUZUKI AOI PORTFOLIO</title>
+
+  <link rel="icon" href="image/favicon.ico">
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
@@ -21,7 +24,7 @@
       <div class="p-img fadeIn">
         <img src="image/portfolio_cover_p.jpg" alt="">
       </div>
-      <a href="#top">
+      <a href="content/profile.html">
         <h3 class="big-header">
           <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
         </h3>
