--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SUZUKI AOI PORTFOLIO</title>
+
+  <link rel="icon" href="../image/favicon.ico">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
@@ -30,9 +33,11 @@
           <div class="p-top menu-trigger" id="menu07">
             <img src="../image/portfolio_png.png" alt="">
           </div>
-          <h3 class="text-repeat">
+          <a href="../content/profile.html">
+            <h3 class="text-repeat">
             <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
           </h3>
+          </a>
         </div>
       </div>
     </div>
@@ -42,7 +47,7 @@
           <div class="p-top">
             <!-- <img src="../image/portfolio_png.png" alt="logo"> -->
           </div>
-          <ul>
+          <ul class="g-nav-main">
             <li>
               <a href="../index.html">
                 <h1>Top</h1>
@@ -51,8 +56,21 @@
             <li>
               <h1>Profile</h1>
             </li>
-            <li>
+            <li class="contents-click">
               <h1>Contents</h1>
+              <div class="g-nav-contents-box none">
+                <ul class="g-nav-contents">
+                <li>
+                  <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                </li>
+                <li><h2>こんなにかわいいパッケージ</h2></li>
+                <li><h2>どのしまにする？</h2></li>
+                <li><h2>天のはるか</h2></li>
+                <li><h2>Enoshima Ocean Education Center</h2></li>
+                <li><h2>JOYL</h2></li>
+              </ul>
+              </div>
+              
             </li>
           </ul>
         </div>
