--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -35,8 +35,8 @@
           </div>
           <a href="../content/profile.html">
             <h3 class="text-repeat">
-            <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
-          </h3>
+              <span class="txt-rotate" data-period="2000" data-rotate='[ "PORTFOLIO", "SUZUKI AOI" ]'></span>
+            </h3>
           </a>
         </div>
       </div>
@@ -60,17 +60,27 @@
               <h1>Contents</h1>
               <div class="g-nav-contents-box none">
                 <ul class="g-nav-contents">
-                <li>
-                  <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
-                </li>
-                <li><h2>こんなにかわいいパッケージ</h2></li>
-                <li><h2>どのしまにする？</h2></li>
-                <li><h2>天のはるか</h2></li>
-                <li><h2>Enoshima Ocean Education Center</h2></li>
-                <li><h2>JOYL</h2></li>
-              </ul>
+                  <li>
+                    <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
+                  </li>
+                  <li>
+                    <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                  </li>
+                  <li>
+                    <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                  </li>
+                  <li>
+                    <h2>天のはるか</h2>
+                  </li>
+                  <li>
+                    <h2>Enoshima Ocean Education Center</h2>
+                  </li>
+                  <li>
+                    <h2>JOYL</h2>
+                  </li>
+                </ul>
               </div>
-              
+
             </li>
           </ul>
         </div>
