--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SUZUKI AOI PORTFOLIO</title>
 
   <link rel="icon" href="image/favicon.ico">
-  
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
@@ -88,7 +88,7 @@
             </p>
           </div>
         </div>
-        <a href="konpake/index.html">
+        <a href="content/konpake.html">
           <div class="img">
             <img src="image/konpake/konpake_logo.jpg" alt="">
             <img src="image/konpake/konpake_flyer_red1.jpg" alt="">
@@ -109,7 +109,7 @@
             </p>
           </div>
         </div>
-        <a href="fukushima/fukushima.html">
+        <a href="content/fukushima.html">
           <div class="img">
             <img src="image/Fukushima/fukushima_icon.jpg" alt="">
             <img src="image/Fukushima/fukushima_A1.jpg" alt="">
