--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -70,7 +70,7 @@
                     <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
                   </li>
                   <li>
-                    <h2>天のはるか</h2>
+                    <h2><a href="tennnoharuka.html">天のはるか</a></h2>
                   </li>
                   <li>
                     <h2>Enoshima Ocean Education Center</h2>
