--- a/content/konpake.html
+++ b/content/konpake.html
@@ -66,7 +66,7 @@
                 </li>
                 <li><h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2></li>
                 <li><h2><a href="../content/fukushima.html">どのしまにする？</a></h2></li>
-                <li><h2>天のはるか</h2></li>
+                <li><h2><a href="tennnoharuka.html">天のはるか</a></h2></li>
                 <li><h2>Enoshima Ocean Education Center</h2></li>
                 <li><h2>JOYL</h2></li>
               </ul>
