--- a/content/JOYL.html
+++ b/content/JOYL.html
@@ -59,7 +59,7 @@
       <div class="small-header">
         <div class="p-position">
           <button id="topbtn">
-            <h3 class="small-name none">天ノはるか
+            <h3 class="small-name none">JOYL
             </h3>
           </button>
           <div class="p-top menu-trigger" id="menu07">
@@ -122,96 +122,23 @@
 
   <div class="content-width">
     <div class="ct-title">
-      <h1 class="fukushima">天ノはるか</h1>
+      <h1>JOYL</h1>
+      <h2>ひとさじの旬</h2>
     </div>
-    <div class="sec-top">
-      <div class="top-img left-width">
-        <div class="ten-position">
-          <img src="../image/tennno-haruka/天ノはるか.png" alt="" class="ten-logo">
-        </div>
-      </div>
-      <div class="top-exp right-width">
-        <div class="exp-box">
-          <h3>Project</h3>
-          <h6>
-            甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。<br><br>Size (W60*H130)
-          </h6>
-        </div>
-        <div class="exp-box">
-          <h3>Item / Time required</h3>
-          <ul class="item-list">
-            <li>
-              <h6><a href="#area-1">Typography</a> / 3h</h6>
-            </li>
-            <li>
-              <h6><a href="#area-2">Package</a> / 4h</h6>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <div class="joyl-top">
+      <h1>Newspaper Ads</h1>
+      <h3>B1 W728*H1030</h3>
     </div>
-    <div class="sec-1 top-mg" id="area-1">
-      <div class="left-width">
-        <h1>Typography</h1>
-        <!-- <ul class="p-goto-nav__lists">
-          <div class="copy-box">
-            <h3>Lead copy</h3>
-            <h3 class="lead-copy">ふくのしま。福島。
-            </h3>
-          </div>
-          <div class="copy-box">
-            <h3>Body copy</h3>
-            <h6>
-              福島って広いから。<br>気になる1つの”しま”を選んだら、あなたにぴったりの満喫をJR東日本が提案します。
-            </h6>
-          </div>
-        </ul> -->
-      </div>
-      <div class="right-width">
-        <ul class="ten-typo">
-          <img src="../image/tennno-haruka/typo_1.jpg" alt="">
-        </ul>
-      </div>
+    <div class="joyl-img">
+      <img src="../image/JOYL/Joyl_3.jpg" alt="">
     </div>
- 
+  </div>
 
-    <div class="sec-2 top-mg fk-copy" id="area-2">
-      <div class="left-width">
-        <h1>Package</h1>
-        <h3>W60*H130</h3>
-        <ul class="p-goto-nav__lists">
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan A</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan A -MockUp</p>
-          </li>
-          <li class="p-goto-nav__list js-navList">
-            <p>Plan B</p>
-          </li>
-        </ul>
-      </div>
-      <div class="right-width">
-        <div class="slider">
-          <ul class="slider js-slickGoTo">
-            <li class="slider-item slider-item61">
-            </li>
-            <li class="slider-item slider-item62">
-            </li>
-            <li class="slider-item slider-item63">
-            </li>
-          </ul>
-        </div>
-      </div>
-        
-    </div>
-
-
-    <footer id="footer">
-      <p id="page-top"><a href="#">
-          <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
-        </a></p>
-    </footer>
+  <footer id="footer">
+    <p id="page-top"><a href="#">
+        <img width="48" height="48" src="https://img.icons8.com/android/48/collapse-arrow.png" alt="collapse-arrow" />
+      </a></p>
+  </footer>
 
 
   </div>
