--- a/content/fukushima.html
+++ b/content/fukushima.html
@@ -104,10 +104,10 @@
                     <h2><a href="tennnoharuka.html">天のはるか</a></h2>
                   </li>
                   <li>
-                    <h2>Enoshima Ocean Education Center</h2>
+                    <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
                   </li>
                   <li>
-                    <h2>JOYL</h2>
+                    <h2><a href="JOYL.html">JOYL</a></h2>
                   </li>
                 </ul>
               </div>
