--- a/content/konpake.html
+++ b/content/konpake.html
@@ -64,11 +64,21 @@
                 <li>
                   <h2><a href="../content/birdcoffee.html">bird coffee</a></h2>
                 </li>
-                <li><h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2></li>
-                <li><h2><a href="../content/fukushima.html">どのしまにする？</a></h2></li>
-                <li><h2><a href="tennnoharuka.html">天のはるか</a></h2></li>
-                <li><h2>Enoshima Ocean Education Center</h2></li>
-                <li><h2>JOYL</h2></li>
+                <li>
+                  <h2><a href="../content/konpake.html">こんなにかわいいパッケージ</a></h2>
+                </li>
+                <li>
+                  <h2><a href="../content/fukushima.html">どのしまにする？</a></h2>
+                </li>
+                <li>
+                  <h2><a href="tennnoharuka.html">天のはるか</a></h2>
+                </li>
+                <li>
+                  <h2><a href="EOEC.html">Enoshima Ocean Education Center</a></h2>
+                </li>
+                <li>
+                  <h2><a href="JOYL.html">JOYL</a></h2>
+                </li>
               </ul>
               </div>
               
