--- a/content/EOEC.html
+++ b/content/EOEC.html
@@ -59,7 +59,7 @@
       <div class="small-header">
         <div class="p-position">
           <button id="topbtn">
-            <h3 class="small-name none">天ノはるか
+            <h3 class="small-name none">Enoshima Ocean Education Center
             </h3>
           </button>
           <div class="p-top menu-trigger" id="menu07">
@@ -122,29 +122,24 @@
 
   <div class="content-width">
     <div class="ct-title">
-      <h1 class="fukushima">天ノはるか</h1>
+      <h1>Enoshima Ocean Education Center</h1>
     </div>
     <div class="sec-top">
       <div class="top-img left-width">
-        <div class="ten-position">
-          <img src="../image/tennno-haruka/天ノはるか.png" alt="" class="ten-logo">
-        </div>
+        <img src="../image/EOEC/EOEC_logo1.jpg" alt="">
       </div>
       <div class="top-exp right-width">
         <div class="exp-box">
           <h3>Project</h3>
           <h6>
-            甘藷干芋専門農園　横田商店。茨城県にて創業50年の甘藷農園。<br>オリジナルブランドさつまいも「天ノはるかR」の青果流通を開始するにあたりパッケージデザインを作成。<br><br>名称由来：特上品質であることのイメージとして「天」の文字を冠し、品種名である「紅はるか」とかけて「天の遥かまで知れ渡るようなさつまいもであること」と「食べてくださるお客様の心が晴れ渡るさつまいもであること」の思いを込めて由来としている。<br><br>Size (W60*H130)
+            子どもたちへ海の教育活動を行う「江の島海洋教育センターのロゴ作成。<br>江ノ島を拠点に、海を中心とした自然の中で思い切り遊び、身体を動かすことを教えている団体。<br>メインの活動場所である海や太陽をイメージし、紙媒体への使用のほかに、Tシャツやキャップに印刷することを踏まえて3パターンのロゴを展開。
           </h6>
         </div>
         <div class="exp-box">
           <h3>Item / Time required</h3>
           <ul class="item-list">
             <li>
-              <h6><a href="#area-1">Typography</a> / 3h</h6>
-            </li>
-            <li>
-              <h6><a href="#area-2">Package</a> / 4h</h6>
+              <h6><a href="#area-1">Logo</a> / 6h</h6>
             </li>
           </ul>
         </div>
@@ -152,59 +147,43 @@
     </div>
     <div class="sec-1 top-mg" id="area-1">
       <div class="left-width">
-        <h1>Typography</h1>
-        <!-- <ul class="p-goto-nav__lists">
-          <div class="copy-box">
-            <h3>Lead copy</h3>
-            <h3 class="lead-copy">ふくのしま。福島。
-            </h3>
-          </div>
-          <div class="copy-box">
-            <h3>Body copy</h3>
-            <h6>
-              福島って広いから。<br>気になる1つの”しま”を選んだら、あなたにぴったりの満喫をJR東日本が提案します。
-            </h6>
-          </div>
-        </ul> -->
-      </div>
-      <div class="right-width">
-        <ul class="ten-typo">
-          <img src="../image/tennno-haruka/typo_1.jpg" alt="">
-        </ul>
-      </div>
-    </div>
- 
-
-    <div class="sec-2 top-mg fk-copy" id="area-2">
-      <div class="left-width">
-        <h1>Package</h1>
-        <h3>W60*H130</h3>
+        <h1>Logo</h1>
         <ul class="p-goto-nav__lists">
           <li class="p-goto-nav__list js-navList">
-            <p>Plan A</p>
+            <p>1*1 Symbol mark</p>
           </li>
           <li class="p-goto-nav__list js-navList">
-            <p>Plan A -MockUp</p>
+            <p>Symbol + Logotype -A</p>
           </li>
           <li class="p-goto-nav__list js-navList">
-            <p>Plan B</p>
+            <p>Symbol + Logotype -B</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>T-shirts -MockUp</p>
+          </li>
+          <li class="p-goto-nav__list js-navList">
+            <p>Card -MockUp</p>
           </li>
         </ul>
       </div>
       <div class="right-width">
         <div class="slider">
           <ul class="slider js-slickGoTo">
-            <li class="slider-item slider-item61">
+            <li class="slider-item slider-item71">
             </li>
-            <li class="slider-item slider-item62">
+            <li class="slider-item slider-item72">
             </li>
-            <li class="slider-item slider-item63">
+            <li class="slider-item slider-item73">
+            </li>
+            <li class="slider-item slider-item74">
+            </li>
+            <li class="slider-item slider-item75">
             </li>
           </ul>
         </div>
       </div>
-        
     </div>
+ 
 
 
     <footer id="footer">
