--- a/content/birdcoffee.html
+++ b/content/birdcoffee.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SUZUKI AOI PORTFOLIO</title>
-
   <link rel="icon" href="../image/favicon.ico">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
   <link href="https://fonts.cdnfonts.com/css/century-gothic-paneuropean" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
@@ -49,7 +47,7 @@
           </div>
           <ul class="g-nav-main">
             <li>
-              <a href="../index.html">
+              <a href="../index_2.html">
                 <h1>Top</h1>
               </a>
             </li>
