--- a/index_2.html
+++ b/index_2.html
@@ -79,9 +79,11 @@
     </nav>
   </header>
 
+  <div class="splashbg1"></div>
+
   <div class="content-box">
     <div class="container">
-      <div class="top-item fadeUp delay-time10 bgUD">
+      <div class="top-item fadeUp delay-time1 bgUD">
         <a href="content/birdcoffee.html">
           <span class="mask-bc">
             <img src="image/bird_coffee/logo_01.png" alt="">
@@ -92,7 +94,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUp delay-time11 bgUD">
+      <div class="top-item fadeUp delay-time1 bgUD">
         <a href="content/EOEC.html">
           <span class="mask-eo">
             <img src="image/EOEC/EOEC_logo1.jpg" alt="">
@@ -103,7 +105,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item box-1 fadeUp delay-time12 bgUD">
+      <div class="top-item box-1 fadeUp delay-time2 bgUD">
         <a href="content/fukushima.html">
           <span class="mask-fu">
             <img src="image/Fukushima/Free-Three-Subway-Station-Poster-Mockup_top.jpg" alt="">
@@ -114,7 +116,7 @@
           </span>
         </a>
       </div>
-      <div class="top-item box-2 fadeUp delay-time14 bgUD">
+      <div class="top-item box-2 fadeUp delay-time4 bgUD">
         <a href="content/konpake.html">
           <span class="mask-kp">
             <img src="image/konpake/konpake_flyer_red1.jpg" alt="">
@@ -147,10 +149,10 @@
           </span>
         </a>
       </div>
-      <div class="top-item fadeUpTrigger delay-time2">
-          <div class="en">
-            <h3>SIX ITEMS IN TOTAL</h3>
-          </div>
+      <div class="top-item fadeUpTrigger box-23 delay-time2">
+        <button id="topbtn2" class="btn">
+          <div class="emblem1">topback・topback・</div>
+        </button>
       </div>
       <div class="top-item box-5 fadeUpTrigger bgUD">
         <a href="content/birdcoffee.html">
@@ -212,7 +214,9 @@
         </a>
       </div>
       <div class="top-item fadeUpTrigger delay-time3">
-        <div class="en"></div>
+        <button id="topbtn3" class="btn">
+          <div class="emblem2">topback・topback・</div>
+        </button>
       </div>
       <div class="top-item box-10 fadeUpTrigger bgUD">
         <a href="content/JOYL.html">
@@ -314,7 +318,9 @@
         </a>
       </div>
       <div class="top-item fadeUpTrigger delay-time3">
-        <div class="en"></div>
+        <button id="topbtn4">
+          <div class="emblem3">topback・topback・</div>
+        </button>
       </div>
       <div class="top-item box-22 fadeUpTrigger">
         <h4>1.bird coffee  2.こんなにかわいいパッケージ  3.どのしまにする？  4.天のはるか  5.Enoshima Ocean Education Center  6.JOYL ひとさじの旬</h4>
@@ -375,7 +381,9 @@
         </a>
       </div>
       <div class="top-item fadeUpTrigger delay-time3">
-        <div class="en"></div>
+        <button id="topbtn5">
+          <div class="emblem4">topback・topback・</div>
+        </button>
       </div>
       <div class="top-item box-18 fadeUpTrigger delay-time1 bgUD">
         <a href="content/JOYL.html">
@@ -467,6 +475,10 @@
       </div>
     </div>
   </div>
+
+  <footer id="footer">
+
+  </footer>
   
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
